JP-8204 Remove dependency on sun.misc.BASE64Decoder and Encoder classes
Replaced the sun.misc.Base64Decoder/Encoders with the java.util.Base64